# sound-source-player

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageUtils_jni.cpp  NativeLibAudioTag_jni.cpp  logging.h  soundsource.cpp
app/src/main/cpp/image/: image.cpp  image.h  imageinfo.hpp
app/src/main/cpp/tags/: tags.cpp  tags.h
app/src/main/java/tech/rollw/player/: PlayerApplication.kt  Switch.kt
app/src/main/java/tech/rollw/player/app/: CrashHandler.kt
app/src/main/java/tech/rollw/player/audio/: Audio.kt  AudioContent.kt  AudioFormatType.kt  AudioPath.kt  AudioStatistics.kt  Media3Ext.kt  PlaybackData.kt
app/src/main/java/tech/rollw/player/audio/list/: Playlist.kt  PlaylistItem.kt  PlaylistType.kt
app/src/main/java/tech/rollw/player/audio/player/: AudioPlayer.kt  AudioPlayerException.kt  AudioPlaylistDelegatePlayer.kt  AudioPlaylistProvider.kt  DefaultAudioPlaylistProvider.kt  ExperimentalPlayerApi.kt  PlayerUtils.kt
app/src/main/java/tech/rollw/player/audio/tag/: Artwork.kt  AudioProperties.kt  AudioTag.kt  AudioTagField.kt  ByteArrayArtwork.kt  Lyric.kt  LyricParser.kt  LyricRawLine.kt  LyricRow.kt  LyricTag.kt  NativeLibAudioTag.kt  TagUtils.kt
app/src/main/java/tech/rollw/player/data/database/: DataConverter.kt  PlayerDatabase.kt
app/src/main/java/tech/rollw/player/data/setting/: LocaleKey.kt  PlayerPreferenceDataStore.kt  PreferenceDataStore.kt  SettingApplyProvider.kt  SettingApplyProviderDelegate.kt  SettingApplyProviderRegistry.kt  SettingItem.kt  SettingKey.kt  SettingSpec.kt  SettingSpecs.kt  SettingType.kt  SettingValue.kt
app/src/main/java/tech/rollw/player/data/storage/: CommonResources.kt  ContentPathImageFetcher.kt  LocalImageLoader.kt
app/src/main/java/tech/rollw/player/service/: AudioPlayerActionReceiver.kt  AudioPlayerNotificationProvider.kt  AudioPlayerSessionService.kt  AudioPlayerTileService.kt  NotificationChannels.kt  WorkerDefaults.kt  WorkerNotificationProvider.kt  WorkerSpec.kt
app/src/main/java/tech/rollw/player/service/scanner/: AudioClassificationWorker.kt  AudioScanWorker.kt
app/src/main/java/tech/rollw/player/statistics/: DateStatistics.kt  Statistics.kt  StatisticsType.kt
app/src/main/java/tech/rollw/player/ui/: BaseActivity.kt  DefaultsNavHostFragment.kt  MediaControllerDelegate.kt  OnCreateViewHost.kt  PlayerAppActivity.kt  ServiceExts.kt  SplashActivity.kt  Toast.kt  ToastUtil.java
app/src/main/java/tech/rollw/player/ui/components/: FileViewer.kt  PlayerBackground.kt  RoundedRow.kt
app/src/main/java/tech/rollw/player/ui/player/: AudioUtils.kt  MainActivity.kt  PlayerScreenLabel.kt  PlayerScreenViewModel.kt  PlayerStateViewModel.kt  SetupActivity.kt
app/src/main/java/tech/rollw/player/ui/setting/: BasePreferenceFragment.kt  ManageSpaceActivity.kt  SettingActivity.kt  SettingNavigations.kt  SettingPreferenceDefaults.kt  SettingViewModel.kt
app/src/main/java/tech/rollw/player/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/tech/rollw/player/ui/tools/: Composables.kt  SettingState.kt
app/src/main/java/tech/rollw/player/util/: ContextUtils.kt  FileLogger.kt  ImageUtils.kt  Logger.kt  LoggerAnalytics.kt  SettingInitializer.kt  TimeExts.kt
app/src/main/res/drawable/: ic_baseline_arrow_back_24.xml  ic_baseline_close_24.xml  ic_baseline_menu_24.xml  ic_baseline_pause_24.xml  ic_baseline_person_24.xml  ic_baseline_play_arrow_24.xml  ic_baseline_search_24.xml  ic_baseline_settings_24.xml  ic_baseline_skip_next_24.xml  ic_baseline_skip_previous_24.xml  ic_icon.xml  ic_icon_colored.xml
app/src/main/res/layout/: activity_main.xml  activity_setting.xml  activity_splash.xml  layout_compose_view.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
support/: build.gradle.kts
support/src/main/: AndroidManifest.xml
support/src/main/java/tech/rollw/support/: SourcedData.kt  StringUtils.kt  Switch.kt
support/src/main/java/tech/rollw/support/analytics/: Analytics.kt  AnalyticsEvent.kt  AndroidLogAnalytics.kt  CombinedAnalytics.kt  InMemoryAnalytics.kt  NoOpAnalytics.kt
support/src/main/java/tech/rollw/support/appcompat/: AppActivity.kt  AppFragment.kt  ContextExts.kt  LocaleDelegate.kt
support/src/main/java/tech/rollw/support/appcompat/widget/: AppImageView.java
support/src/main/java/tech/rollw/support/io/: ContentPath.kt  FileType.kt  Files.kt  ImageFormatType.kt  PathType.java  StoragePath.kt
support/src/main/res/values/: values.xml
ui/: build.gradle.kts
ui/src/main/: AndroidManifest.xml
ui/src/main/java/tech/rollw/compose/animation/core/: AnimateAsState.kt
ui/src/main/java/tech/rollw/compose/ui/graphics/: FadingEdge.kt
ui/src/main/java/tech/rollw/player/ui/: ColorScheme.kt  PlayerTheme.kt  Typography.kt
(+43 files in other folders)
